# kafka-event-streaming

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: postgres_init.sql  topic_configs.yml
docs/: architecture.md
src/: __init__.py  config.py  models.py
src/connectors/: __init__.py  elasticsearch_sink.json  postgres_cdc_source.json  s3_archive_sink.json
src/consumers/: __init__.py  dlq_handler.py  exactly_once.py  group.py  offset_manager.py
src/producers/: __init__.py  batched.py  idempotent.py  partitioner.py  transactional.py
src/schemas/: order_placed_v1.avsc  order_placed_v2.avsc  payment_processed.avsc  shipment_created.avsc
src/streams/: __init__.py  app.py  enrichment.py  fraud_detection.py  state_machine.py
tests/: conftest.py  test_consumers.py  test_producers.py  test_schemas.py  test_streams.py
